# perotf-image

./: Dockerfile  README.md  docker-compose.yaml  plugins.txt  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
