[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "perotf-image"
description = "nomad distribution perotf"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.10", "httpx==0.27.2"]

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git",
  'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git',
  'nomad-perotf @ git+https://github.com/nomad-hzb/nomad-perotf.git']
  
jupyter = [
'voila',
'ipyaggrid',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
#'baybe',
'pyvis'
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.10"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
