[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "perotf-image"
description = "nomad distribution perotf"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab[parsing, infrastructure] == 1.4.1",
    "httpx==0.27.2",
]


[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git",
  'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git',
  'nomad-luqy-plugin @ git+https://github.com/Pepe-Marquez/nomad-luqy-plugin.git',
  'nomad-perotf @ git+https://github.com/nomad-hzb/nomad-perotf.git']
  
jupyter = [
'voila',
'lmfit>=1.3',
'pandas>=2.2,<3',
'numexpr>=2.8.4',
'ipyaggrid',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
#'baybe',
'pyvis'
]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[parsing, infrastructure, dev]==1.4.1"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "explicit"
constraint-dependencies = ["flatdict>=4.1.0"]


[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
